# sensorhub

./: .gitattributes  .gitignore  Makefile  README.md  requirements.txt
.github/workflows/: python-tests.yml
app/: alerts.py  database.py  export.py  firmware.py  healthcheck.py  main.py  middleware.py  models.py  prometheus.py  request_logger.py  retention.py  simulator.py  tags.py  websocket.py
app/can/: receiver.py
app/config/: __init__.py  config.py
app/errors/: __init__.py  exceptions.py
app/logging/: __init__.py  setup.py
app/mqtt/: router.py  subscriber.py
app/security/: __init__.py  dependencies.py  hmac_verify.py
app/serial/: uart_receiver.py
client-cpp/: .gitignore  CMakeLists.txt  README.md
client-cpp/inc/: backend_client.hpp  can_transport.hpp  hmac_signer.hpp  mqtt_client.hpp  nonce_generator.hpp  retry_policy.hpp
client-cpp/lib/bytebuf/: bytebuf.hpp
client-cpp/lib/sensorproto/: sensor_message.cpp  sensor_message.hpp
client-cpp/lib/strutil/: strutil.hpp
client-cpp/src/: backend_client.cpp  can_transport.cpp  hmac_signer.cpp  main.cpp  mqtt_client.cpp
docs/: can_protocol.md  mqtt_protocol.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx
frontend/src/components/: ReadingsChart.jsx  RecentActivity.jsx  SensorList.jsx  StatusBar.jsx
scripts/: setup_vcan.sh
tests/: test_api.py
